--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,11 @@ services:
         - bash
         - -c
         - awslocal dynamodb list-tables
+          && awslocal s3 ls
+          && awslocal sqs list-queues
       interval: 5s
       timeout: 10s
-      start_period: 20s
+      start_period: 30s
 
   pizza-ordering-server:
     container_name: pizza-ordering-server
